Update CI workflow to run on all branch pushes

--- a/.github/workflows/test-fsg.yml
+++ b/.github/workflows/test-fsg.yml
@@ -4,9 +4,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
   push:
-    branches-ignore:
-      - master
-      - main
+    branches:
+      - '**'
 
 jobs:
   test-fsg:
