--- a/.github/workflows/test-fsg.yml
+++ b/.github/workflows/test-fsg.yml
@@ -26,6 +26,8 @@ jobs:
           docker pull simvascular/solver:latest
 
       - name: Run FSGe test in Docker container
+        id: docker_test
+        continue-on-error: true
         run: |
           docker run --rm \
             -v ${{ github.workspace }}/svMultiPhysics:/svfsi \
@@ -47,20 +49,20 @@ jobs:
               echo "================================"
               echo "Building svFSIplus..."
               echo "================================"
-              bash makeCommand.sh
+              bash makeCommand.sh 2>&1 | tee /svFSGe/test_output/build.log
 
               echo ""
               echo "================================"
               echo "Installing Python dependencies..."
               echo "================================"
-              pip install numpy vtk matplotlib scipy
+              pip install numpy vtk matplotlib scipy 2>&1 | tee /svFSGe/test_output/pip_install.log
 
               echo ""
               echo "================================"
               echo "Running FSGe test (nmax=2)..."
               echo "================================"
               cd /svFSGe
-              python3 ./fsg.py in_sim/partitioned_test.json
+              python3 ./fsg.py in_sim/partitioned_test.json 2>&1 | tee /svFSGe/test_output/test_run.log
 
               echo ""
               echo "================================"
@@ -80,17 +82,41 @@ jobs:
               echo "Test execution completed successfully!"
             '
 
+      - name: Check test execution status
+        if: always()
+        run: |
+          if [ "${{ steps.docker_test.outcome }}" != "success" ]; then
+            echo "❌ Docker test step failed!"
+            echo ""
+            echo "Checking for error logs..."
+            if [ -f test_output/build.log ]; then
+              echo "=== Build log (last 50 lines) ==="
+              tail -50 test_output/build.log
+            fi
+            if [ -f test_output/test_run.log ]; then
+              echo "=== Test run log (last 50 lines) ==="
+              tail -50 test_output/test_run.log
+            fi
+            exit 1
+          else
+            echo "✅ Docker test step completed successfully"
+          fi
+
       - name: List test output
+        if: always()
         run: |
           echo "Test output directory contents:"
-          ls -la test_output/
-          if [ -d test_output/partitioned_* ]; then
+          ls -la test_output/ || echo "test_output directory is empty or missing"
+          if ls test_output/partitioned_* 1> /dev/null 2>&1; then
             echo ""
             echo "Partitioned directory contents:"
             ls -la test_output/partitioned_*/
+          else
+            echo "No partitioned results found in test_output/"
           fi
 
       - name: Compare results with reference
+        if: success()
         run: |
           echo "================================"
           echo "Comparing test results with reference baseline..."
@@ -101,6 +127,7 @@ jobs:
 
           if [ -z "$RESULT_DIR" ]; then
             echo "ERROR: No test results found in test_output/"
+            echo "The simulation may have failed. Check the test execution logs above."
             exit 1
           fi
 
@@ -123,6 +150,7 @@ jobs:
             !test_output/**/partitioned/solid_*.vtu
             !test_output/**/partitioned/mesh_*.vtu
           retention-days: 30
+          if-no-files-found: ignore
 
       - name: Upload convergence plot
         if: always()
