Fix Git dubious ownership error in Docker container
Add safe.directory configuration for mounted volumes to prevent
Git from blocking operations due to user ID mismatches between
host and container.

--- a/.github/workflows/test-fsg.yml
+++ b/.github/workflows/test-fsg.yml
@@ -39,6 +39,11 @@ jobs:
               echo "================================"
               echo "Cloning svMultiPhysics..."
               echo "================================"
+
+              # Fix Git ownership issues in Docker
+              git config --global --add safe.directory /svfsi
+              git config --global --add safe.directory /svFSGe
+
               cd /svfsi
               git init
               git remote add origin https://github.com/Eleven7825/svMultiPhysics.git
