Add element wise comparison like in svmp, store vtu via git lfs

--- a/.github/workflows/test-fsg.yml
+++ b/.github/workflows/test-fsg.yml
@@ -142,7 +142,9 @@ jobs:
 
           python3 scripts/compare_results.py \
             test_reference/nmax_2/reference_results.json \
-            "$RESULT_DIR/partitioned.json"
+            "$RESULT_DIR/partitioned.json" \
+            --ref-vtu test_reference/nmax_2/tube_002.vtu \
+            --test-vtu "$RESULT_DIR/partitioned/converged/tube_002.vtu"
 
       - name: Upload test artifacts
         if: always()
